paas/non-gitops-middleware/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: pgadmin
    manifest-kind: deploy
  name: pgadmin
  namespace: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
      name: pgadmin
    spec:
      volumes:
        - name: pgadmin-config
          configMap:
            name: pgadmin-config
            defaultMode: 420
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data
      containers:
        - image: jfrog.uk.ngridtools.com/public-proxy-dockerhub/dpage/pgadmin4:7.0
          imagePullPolicy: Always
          name: pgadmin
          serviceName: pgadmin-service
          resources:
            limits:
              memory: 2G
              cpu: 1000m
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: pgadmin-config
              readOnly: true
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
          terminationMessagePolicy: File
