paas/non-gitops-middleware/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: pgadmin
  labels:
    app: pgadmin
spec:
 ports:
 - name: http
   protocol: TCP
   port: 80
   targetPort: 80
 selector:
   app: pgadmin
 type: NodePort
